Add untyped project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,7 @@ jobs:
       - uses: leanprover/lean-action@v1
         with:
           lake-package-directory: arithmetic
+
+      - uses: leanprover/lean-action@v1
+        with:
+          lake-package-directory: untyped
