--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,7 @@ jobs:
       - uses: leanprover/lean-action@v1
         with:
           lake-package-directory: untyped
+
+      - uses: leanprover/lean-action@v1
+        with:
+          lake-package-directory: typed
