--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,7 @@ jobs:
       - uses: leanprover/lean-action@v1
         with:
           lake-package-directory: typed
+
+      - uses: leanprover/lean-action@v1
+        with:
+          lake-package-directory: CoC
